# test-conan

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
src/: test-conan.cpp  test-conan.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  example.cpp
